syntax = "proto3";

package PlayerControllerProto;

service PlayerController {
  rpc CreatePlayer (CreateRequest) returns (CreateReply);
  rpc CheckPlayer (CheckRequest) returns (CheckReply);
  rpc DeletePlayer (DeleteRequest) returns (DeleteReply);
}

message CreateRequest {
	string nick = 1;
}

message CreateReply {
  string status = 1;
}

message CheckRequest {
}

message CheckReply {
	bool isUserHavePlayer = 1;
	string nick = 2;
}

message DeleteRequest {
}

message DeleteReply {
	bool isDeleted = 1;
}